
The contributors that suggested a given feature are shown in []. Thanks!


* Verilator 4.107 devel

**    Support randomize() class method and rand (#2607). [Krzysztof Bieganski]

***   Support $cast and new CASTCONST warning.

***   Add --top option as alias of --top-module.

****  Report UNUSED on parameters, localparam and genvars (#2627). [Charles Eric LaForest]

****  Fix passing parameter type instantiations by position number.

****  Fix DPI open array handling issues.

****  Fix showing reference locations for BLKANDNBLK (#2170). [Yuri Victorovich]

****  Fix genblk naming to match IEEE (#2686). [tinshark]

****  Fix error when dotted refers to missing module (#2095). [Alexander Grobman]


* Verilator 4.106 2020-12-02

**    Change -sv option to select 1800-2017 instead of 1800-2005.

***   Check for proper 'local' and 'protected' (#2228).

***   Support $random and $urandom seeds.

***   Support $monitor and $strobe.

***   Support complex function arguments.

***   Support 'super'.

***   Support 'with item.index'.

****  Fix the default GNU Make executable name on FreeBSD (#2553). [Yuri Victorovich]

****  Fix trace signal names getting hashed (#2643).  [Barbara Gigerl]

****  Fix unpacked array parameters near functions (#2639). [Anderson Ignacio da Silva]

****  Fix access to non-overridden base class variable (#2654). [Tobias Rosenkranz]


* Verilator 4.104 2020-11-14

***   Support queue and associative array 'with' statements (#2616).

***   Support queue slicing (#2326).

***   Support associative array pattern assignments and defaults.

***   Support static methods and typedefs in classes (#2615). [Krzysztof Bieganski]

****  Report error on typedef referencing self (#2539). [Cody Piersall]

****  With --debug, turn off address space layout randomization.

****  Fix iteration over mutating list bug in VPI (#2588). [Kaleb Barrett]

****  Fix cast width propagation (#2597). [flex-liu]
